# cycloid

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  README.md  cross-rpizero.cmake  crosscompile.cmake  crosscompile.cmake.patch  crosscompile.travis  cycloid-build.Dockerfile
arduino/: README.md
arduino/cycloid/: cycloid.ino
design/coneslam/: annotate.py  ba.py  ba_dense.py  ceiling-sympy.ipynb  ceiling.ipynb  coneclassify.py  ekf.py  genlut.py  label.py  lm_bball.txt  lut.h  params.py  pf.py  pf360.ipynb  pf360.py  pfrb.py  pfrbtune.py  pftune.py  rbekf-deriv.ipynb  rbekf.ipynb  recordreader.py  replay.py  replayfront.py  tune.py  windshield.ipynb
design/dynamics/: annotate.py  caldata.py  ddp.py  params.py  recordreader.py
design/ekf/: codegen.py  ekftest.py  model.py  motor.py  slam.py
design/ekf/localize_cc/: ekf.cc  ekf.h
design/ekf/localize_py/: ekf.py
design/ekf/out_cc/: ekf.cc  ekf.h
design/ekf/out_py/: ekf.py
design/trackplan/: fiducial.py  tapetrack.py  track_opt.py  trackplan.py
hw/encoders/: README.md  gen_png.py
hw/pcb/: README.md  cycloid-cache.lib  cycloid.kicad_pcb  cycloid.pro  cycloid.sch  fp-lib-table
hw/pcb/gerbers/: cycloid-B.Cu.gbl  cycloid-B.Mask.gbs  cycloid-B.SilkS.gbo  cycloid-Edge.Cuts.gm1  cycloid-F.Cu.gtl  cycloid-F.Mask.gts  cycloid-F.SilkS.gto  cycloid.drl
hw/scad/: baseplate.scad  baseplate.stl  blazer1-arducam.stl  blazer1-baseplate-rpionly.stl  blazer1-rearup.scad  blazer1-rpimount.stl  blazer1-shocktowermount.stl  blazer1-sprocketmount.stl  blazer1-windshield.scad  blazer1-windshield.stl  blazer1.scad  camholder.scad  camholder.stl  fasteners.scad  k989.scad  k989.stl  lcdstand.scad  magnet-camera.stl  magnet-dispriser.scad  magnet-dispriser.stl  magnet-rpimount.stl  magnet.scad  qvandal-bumper.stl  qvandal-rpi.stl  qvandal.scad  servoplate.stl  traxxas.scad
src/: CMakeLists.txt  input.h
src/ceiltrack/: ceiltrack.cc  ceiltrack.h  localize_test.cc
src/coneslam/: CMakeLists.txt  fisheye.cc  fisheye.h  imgproc.cc  imgproc.h  imgproc_test.cc  localize.cc  localize.h  localize_test.cc  lut.h  uvmap1.txt
src/coneslam/testdata/: 194625.txt  lm.txt
src/controlloop/: CMakeLists.txt  README.md  cf.cc  fit.h  motorcontrol.h  motorcontrol_test.cc  motorlearn.cc  pid.h
src/controlloop/testdata/: testlog.txt
src/drive/: CMakeLists.txt  bucketcount.txt  conf.py  config.cc  config.h  controller.cc  controller.h  controller_test.cc  drive.cc  driver.cc  driver.h  ekf.cc  ekf.h  floodmap.txt  flushthread.h  home_raceline_k.txt  home_raceline_psi.txt  home_raceline_v.txt  home_raceline_y.txt  home_track_k.txt  home_track_u.txt  home_track_x.txt  imgproc.cc  imgproc.h  localize.cc  localize.h  localize_test.cc  main.cc  oakland_raceline_k.txt  oakland_raceline_psi.txt  oakland_raceline_v.txt  oakland_raceline_y.txt  oakland_track_k.txt  oakland_track_u.txt  oakland_track_x.txt  obstacle.cc  obstacle.h  obstacle_test.cc  pinet.cc  pinet.h  (+16 more)
src/drive/testdata/: track.txt  track2.txt
src/gpsdrive/: CMakeLists.txt  conf.py  config.cc  config.h  gpsdrive.cc  gpsdrive.h  main.cc  trajtrack.cc  trajtrack.h
src/gpsdrive/testdata/: thunderhill.txt
src/hw/cam/: CMakeLists.txt  cam.cc  cam.h  camtest.cc
src/hw/car/: CMakeLists.txt  README.md  car.cc  car.h  pca9685.cc  pca9685.h  pigpio.cc  pigpio.h  servotest.cc  stm32hat.cc  stm32hat.h  stm32i2c.cc  stm32i2c.h  stm32rs232.cc  stm32rs232.h  teensy.cc  teensy.h
src/hw/gpio/: CMakeLists.txt  gpio.cc  gpio.h  i2c.cc  i2c.h  spi.cc  spi.h
src/hw/gps/: CMakeLists.txt  ubx.cc  ubx.h  ubx_main.cc
src/hw/imu/: CMakeLists.txt  README  generic9dof.cc  hmc5883l.cc  hmc5883l.h  icm20600.cc  icm20600.h  icm20600_main.cc  imu.cc  imu.h  imu_log.cc  imu_main.cc  invensense.cc  invensense.h  mag.cc  mag.h  mpu9150.cc  mpu9150.h  mpu9150_main.cc
src/hw/input/: CMakeLists.txt  input.h  js.cc  js.h  jstest.cc
src/hw/lcd/: CMakeLists.txt  fbdev.cc  fbdev.h  lcdtest.cc
src/io/: flushthread.h
src/lens/: CMakeLists.txt  fisheye.cc  fisheye.h  fisheye_test.cc
src/localization/: CMakeLists.txt
src/localization/ceiltrack/: CMakeLists.txt  ceiltrack.cc  ceiltrack.h  localize_test.cc
src/localization/ceiltrack/testdata/: golden.txt
src/localization/coneslam/: fisheye.cc  imgproc.cc  imgproc_test.cc  localize.cc  localize_test.cc
src/ui/: CMakeLists.txt  display.cc  display.h  drawtext.cc  drawtext.h  ft2bigfont.txt  ft2bigfontwidth.txt  ft2font.txt  ft2fontwidth.txt  yuvrgb565.cc  yuvrgb565.h
stm32/: Makefile  README.md  STM32F030F4Px_FLASH.ld  cycloidp1.1.elf  cycloidp1.1.ioc  openocd.cfg  raspberrypi2-native.cfg
stm32/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
stm32/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
tools/bundleadj/: ba.py  frontend.py  lights.ipynb  recordreader.py
tools/camcal/: .gitignore  README.md  anglecal.py  birdseye.py  cal.py  undistort.py
tools/ceilslam/: ceiltrack.py  editedmask.py  floormask.py  generate.py  get-testdata.ipynb  gui.py  mkyuv420.py
tools/mapgen/: .gitignore  mapgen.py
tools/replay/: .gitignore  bucketcount.npy  ekf.py  floodmap.npy  gui.py  imgproc.py  imgremap.py  kmap.txt  laptimer.py  localize.py  modeleval.py  recordreader.py  replay.py  udmask.npy  udplane.npy
tools/sac/: README.md  trackdata.npy  train.py
tools/sim/: gui.py  lm.txt  track.txt
tools/trackplan/: gui.py  lm.txt  pointpick.html  tapetrack.py  track.txt  track_opt.py  valueiter.py  vicuda.py
